crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_tour_empty_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..38 Reset Reset BOLD
0 40..50 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
6 0..1 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
7 0..1 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
8 0..1 Cyan Reset -
8 1..5 Reset Reset BOLD
8 27..28 Cyan Reset -
9 0..98 Cyan Reset -
10 0..2 Cyan Reset -
10 3..50 Reset Reset BOLD
10 97..98 Cyan Reset -
11 0..2 Cyan Reset -
11 97..98 Cyan Reset -
12 0..2 Cyan Reset -
12 97..98 Cyan Reset -
13 0..2 Cyan Reset -
13 97..98 Cyan Reset -
14 0..2 Cyan Reset -
14 97..98 Cyan Reset -
15 0..2 Cyan Reset -
15 3..34 Reset Reset BOLD
15 97..98 Cyan Reset -
16 0..2 Cyan Reset -
16 97..98 Cyan Reset -
17 0..2 Cyan Reset -
17 97..98 Cyan Reset -
18 0..2 Cyan Reset -
18 3..42 Reset Reset DIM
18 97..98 Cyan Reset -
19 0..98 Cyan Reset -
20 0..1 Cyan Reset -
20 1..7 Reset Reset BOLD|DIM
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 1..17 Reset Reset DIM
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 1..27 Reset Reset DIM
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 1..7 Reset Reset BOLD|DIM
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 1..17 Reset Reset DIM
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 1..27 Reset Reset DIM
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 1..7 Reset Reset BOLD|DIM
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 1..17 Reset Reset DIM
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 0..94 Reset Reset DIM
