crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_tour_herdr_80x24_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..36 Reset Reset BOLD
0 38..49 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 2..78 Cyan Reset -
6 0..1 Cyan Reset -
6 2..3 Cyan Reset -
6 4..45 Reset Reset BOLD
6 77..78 Cyan Reset -
7 0..1 Cyan Reset -
7 2..3 Cyan Reset -
7 77..78 Cyan Reset -
8 0..1 Cyan Reset -
8 2..3 Cyan Reset -
8 77..78 Cyan Reset -
9 0..1 Cyan Reset -
9 2..3 Cyan Reset -
9 77..78 Cyan Reset -
10 0..1 Cyan Reset -
10 2..3 Cyan Reset -
10 77..78 Cyan Reset -
11 0..1 Cyan Reset -
11 2..3 Cyan Reset -
11 77..78 Cyan Reset -
12 0..1 Cyan Reset -
12 2..3 Cyan Reset -
12 4..34 Reset Reset BOLD
12 77..78 Cyan Reset -
13 0..1 Cyan Reset -
13 2..3 Cyan Reset -
13 77..78 Cyan Reset -
14 0..1 Cyan Reset -
14 2..3 Cyan Reset -
14 77..78 Cyan Reset -
15 0..1 Cyan Reset -
15 2..3 Cyan Reset -
15 77..78 Cyan Reset -
16 0..1 Cyan Reset -
16 2..3 Cyan Reset -
16 4..43 Reset Reset DIM
16 77..78 Cyan Reset -
17 0..1 Cyan Reset -
17 2..78 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..28 Cyan Reset -
23 0..33 Reset Reset DIM
23 37..80 Reset Reset DIM
