crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_tour_keys_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │select a file (↑↓ or click) · ? for help                               │"
"│  main · 3 files          │                                                                       │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│──────────────────────────│                                                                       │"
"│┌ welcome ───────────────────────────────────────────────────────────────────────────────────────┐│"
"││ Welcome to lastcall                                                                            ││"
"││                                                                                                ││"
"││ The list on the left is the repositories under this directory. Pick a file and the diff opens  ││"
"││ on the right.                                                                                  ││"
"││                                                                                                ││"
"││ a  accept the hunk under the cursor        A  accept the whole file  Ctrl-A  accept everything ││"
"││ n / p  next and previous hunk              tab, or left and right, move between the two panes  ││"
"││ u  put a hunk back the way it was          m  flag it with a note    z  undo the last accept   ││"
"││ t  hide repositories with nothing pending  s  snooze a repository    ?  every key, any time    ││"
"││                                                                                                ││"
"││ enter  next          q  skip the rest                                                          ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  ^A accept all  t hide empty  Tab focus  r refresh  R reload  ? help  q quit      "
